src/test/ui/specialization/min_specialization/specialization_super_trait.ds
// Test that supertraits can't be assumed in impls of
// `dustc_specialization_trait`, as such impls would
// allow specializing on the supertrait.

#![feature(min_specialization)]
#![feature(dustc_attrs)]

#[dustc_specialization_trait]
trait SpecMarker: Default {
    fn f();
}

impl<T: Default> SpecMarker for T {
    //~^ ERROR cannot specialize
    fn f() {}
}

fn main() {}
